Prod Valpre updated code